{
    "name": "TouchSystem",
    "maps": [
        {
            "name": "Touch",
            "id": "cc496777-0014-453f-9298-0a98f5e0936b",
            "actions": [
                {
                    "name": "TapPosition",
                    "type": "Value",
                    "id": "cb9eb4db-fcbb-4e17-9284-e8587896652d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                },
                {
                    "name": "TapPress",
                    "type": "Button",
                    "id": "1b03c79a-7935-4d89-8ce4-4aafe7314574",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold",
                    "type": "Button",
                    "id": "1c7c09ef-84b3-456e-830b-12c6eb1cb6b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.05)",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldPosition",
                    "type": "Value",
                    "id": "3ef05287-9b79-4a05-b19c-32ff36664b08",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold(duration=0.25)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a6a697e-8f2e-48f0-9ef5-7901cac3cc01",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd502e04-a163-46bb-a3a4-5c6045f7c07b",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "504a4a77-6a89-4418-b810-f1831eeec7fe",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "391ffd8a-ab8b-40b9-896c-84331bfece16",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HoldPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}